--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,4 +1,5 @@
 @import "./normalize.css";
+@import "./profile.scss";
 
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -10,8 +11,8 @@ html {
 
 body {
     padding: 2rem 2rem;
-    background: #f9fafb;
-    color: #111827;
+    background: #212121;
+    color: #ffffff;
 }
 
 main {
@@ -20,11 +21,11 @@ main {
 }
 
 hr {
-    width: 75%;
+    width: 100%;
     height: 1px;
     margin: 1.5rem auto;
     border: 0;
-    background-color: rgba(0, 0, 0, 0.15);
+    background-color: rgb(50, 50, 50);
 }
 
 .page-container {
