--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,5 +1,6 @@
 @import "./normalize.css";
 @import "./profile.scss";
+@import "./todo.scss";
 
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
