--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,7 @@
 @import "./normalize.css";
 @import "./profile.scss";
 @import "./todo.scss";
+@import "./blog.scss";
 
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -18,7 +19,6 @@ body {
 
 main {
     display: block;
-    text-align: center;
 }
 
 hr {
@@ -54,11 +54,85 @@ a {
 }
 
 // Home {{{
-.figure {
+figure {
     display: block;
+    text-align: center;
 }
 .logo {
     margin: 1rem auto;
     text-align: center;
+}
+.mainContent {
+    text-align: center;
+}
+// }}}
+
+// Sections {{{
+.section-header {
+    margin: 1rem 0;
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.section-info {
+    display: flex;
+    flex-wrap: wrap;
+    font-weight: 300;
+    letter-spacing: 0.025rem;
+}
+
+.section-header + .section-info {
+    margin-top: -0.75rem;
+}
+
+.section-prelude {
+    margin-bottom: 1rem;
+    font-size: 1.125rem;
+}
+
+.section-cover {
+    margin: 1rem auto;
+    width: 75%;
+}
+
+.section-misc {
+    margin: 0.15rem 0;
+    font-style: italic;
+}
+
+.section-postlude {
+    padding: 0 1rem;
+    font-size: 1.125rem;
+}
+// }}}
+
+// Lists {{{
+.entry {
+    margin: 1rem 0;
+}
+.entry-name {
+    font-size: 1.15rem;
+}
+
+.entry-description {
+    margin-top: 0.25rem;
+}
+
+.entry-info {
+    margin-top: 0.25rem;
+    display: flex;
+    flex-wrap: wrap;
+    font-weight: 300;
+    letter-spacing: 0.025rem;
+}
+
+.label {
+    margin-right: 0.75rem;
+    display: flex;
+    align-items: center;
+}
+
+.label > * + * {
+    margin-left: 0.25rem;
 }
 // }}}
