--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -29,7 +29,7 @@ html {
 
 body {
     padding: 2rem 2rem;
-    background-color: #212121;
+    background-color: #181a1b;
     color: #ffffff;
 }
 
