--- a/src/css/profile.scss
+++ b/src/css/profile.scss
@@ -14,6 +14,27 @@
     }
 }
 
+@media only screen and (max-width: 980px) {
+    .cards {
+        grid-template-columns: repeat(2, 1fr) !important;
+
+        .card {
+            .cardHeader {
+                height: 6.5rem !important;
+
+                margin-bottom: 5px;
+                img {
+                    height: 100px;
+                }
+            }
+        }
+    }
+    .cardContent p:nth-child(2) {
+        height: 0.3rem;
+        visibility: hidden;
+    }
+}
+
 .cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -31,7 +52,7 @@
             font-size: 30px;
             text-align: center;
             height: 8rem;
-            width: 15rem;
+            width: 100%;
             background-color: #505050;
             padding-top: 20px;
             padding-bottom: 10px;
